# STM32N6_Samples_Zephyr

./: CMakeLists.txt  README.md  west.yml
benchmark/: .gitignore  LICENSE.md  README.md  Release_Notes.md  west.yml
benchmark/Binary/: app.hex  mcuboot.hex
benchmark/app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
benchmark/app/Model/: generate-n6-model.sh  network.c  network.h  network_ecblobs.h  st_yoloxn_d033_w025_256_int8.tflite  test.py
benchmark/app/scripts/: west-commands.yml
benchmark/app/src/: main.c  model.c
drivers/: CMakeLists.txt  Kconfig
drivers/rfid/: CMakeLists.txt  Kconfig
drivers/rfid/rc522/: CMakeLists.txt  Kconfig  rc522.c
drivers/sensors/: CMakeLists.txt  Kconfig
drivers/sensors/st/: CMakeLists.txt  Kconfig
drivers/sensors/st/ism330dlc/: CMakeLists.txt  Kconfig  ism330dlc.c  ism330dlc_i2c.c
drivers/sensors/st/vl53l5cx/: CMakeLists.txt  Kconfig  platform.c  vl53l5cx_zephyr.c
dts/bindings/rfid/: nxp,rc522.yaml
dts/bindings/sensors/: st,ism330dlc.yaml  st,vl53l5cx.yaml
imu/: CMakeLists.txt  app.overlay  prj.conf
imu/src/: main.c
include/rfid/: rc522.h
rfid_rc522/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
rfid_rc522/src/: main.c
samples/blinky/: README.rst
samples/blinky/src/: main.c
samples/button/: README.rst
samples/button/src/: main.c
samples/hello_world/: README.rst  prj.conf
tof/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
tof/src/: main.c  sd_logger.c  sd_logger.h  tof_display.c  tof_display.h
tof_ai/: CMakeLists.txt  Kconfig  prj.conf
tof_ai/src/: NanoEdgeAI.h  main.c  neai_shim.c  tof_display.c  tof_display.h
zephyr/: module.yaml
